--- a/jenkinsfile
+++ b/jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
         withSonarQubeEnv('SonarQube') {
           sh "${SCANNER_HOME}/bin/sonar-scanner \
             -D sonar.projectKey=sim_javaPipeline \
-            -D sonar.projectName=pipeline \
+            -D sonar.projectName=sim_javaPipeline \
             "
         }
       }
